sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:26: error: value =-= is not a member of Int
    fin=-=1
       ^